loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__newtype_local_serde_named_traits.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
/// A marker trait that shares only its spelling with `std.serde.json.Serialize`.
pub trait Serialize {}
/// A marker trait that shares only its spelling with `std.serde.json.Deserialize`.
pub trait Deserialize {}
/// A newtype adopting both local markers; it must compile to two empty impls.
#[derive(Debug, Clone, Copy)]
pub struct Number(pub i64);
impl incan_std_core::reflection::HasTypeClassName for Number {
    fn __class_name__() -> &'static str {
        "Number"
    }
}
impl Serialize for Number {}
impl Deserialize for Number {}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = "Entry point kept empty: the fixture is about declarations, not behavior.";
    let _ = ();
}
