loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__newtype_with_override.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug)]
struct CustomResponse(pub String);
impl incan_std_core::reflection::HasTypeClassName for CustomResponse {
    fn __class_name__() -> &'static str {
        "CustomResponse"
    }
}
impl CustomResponse {
    pub fn ok(message: String) -> CustomResponse {
        return CustomResponse(incan_std_core::strings::str_concat(&message, &" OK"));
    }
    pub fn __into_response__(&self) -> String {
        return incan_std_core::strings::str_concat(&"Custom: ", &self.0);
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let response: CustomResponse = CustomResponse::ok("Status".to_string());
    let result: String = response.__into_response__();
    let _ = println!("{}", result);
}
