loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__ordinal_key_builtin_impls.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::collections::OrdinalKey;
#[derive(Debug, Clone, PartialEq)]
enum Status {
    Paid,
    Open,
}
impl incan_std_core::reflection::HasTypeClassName for Status {
    fn __class_name__() -> &'static str {
        "Status"
    }
}
impl Status {
    pub fn value(&self) -> String {
        match self {
            Self::Paid => "paid".to_string(),
            Self::Open => "open".to_string(),
        }
    }
    pub fn from_value(value: impl AsRef<str>) -> Option<Self> {
        match value.as_ref() {
            "paid" => Some(Self::Paid),
            "open" => Some(Self::Open),
            _ => None,
        }
    }
}
impl std::fmt::Display for Status {
    fn fmt(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Self::Paid => formatter.write_str("paid"),
            Self::Open => formatter.write_str("open"),
        }
    }
}
impl std::str::FromStr for Status {
    type Err = String;
    fn from_str(value: &str) -> Result<Self, Self::Err> {
        Self::from_value(value)
            .ok_or_else(|| {
                format!("invalid value for {}: {}", stringify!(Status), value)
            })
    }
}
#[derive(Debug, Clone, PartialEq)]
enum HttpStatus {
    Ok,
    NotFound,
}
impl incan_std_core::reflection::HasTypeClassName for HttpStatus {
    fn __class_name__() -> &'static str {
        "HttpStatus"
    }
}
impl HttpStatus {
    pub fn value(&self) -> i64 {
        match self {
            Self::Ok => 200,
            Self::NotFound => 404,
        }
    }
    pub fn from_value(value: i64) -> Option<Self> {
        match value {
            200 => Some(Self::Ok),
            404 => Some(Self::NotFound),
            _ => None,
        }
    }
}
impl std::fmt::Display for HttpStatus {
    fn fmt(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Self::Ok => formatter.write_str(&200.to_string()),
            Self::NotFound => formatter.write_str(&404.to_string()),
        }
    }
}
impl std::str::FromStr for HttpStatus {
    type Err = String;
    fn from_str(value: &str) -> Result<Self, Self::Err> {
        let parsed = value.parse::<i64>().map_err(|err| err.to_string())?;
        Self::from_value(parsed)
            .ok_or_else(|| {
                format!("invalid value for {}: {}", stringify!(HttpStatus), value)
            })
    }
}
pub fn key_bytes<T: OrdinalKey>(value: T) -> Vec<u8> {
    return crate::__incan_std::collections::OrdinalKey::ordinal_bytes(&value);
}
pub fn key_encoding<T: OrdinalKey>(_: T) -> String {
    return T::ordinal_encoding();
}
pub fn str_bytes(value: String) -> Vec<u8> {
    return key_bytes(value);
}
pub fn i32_bytes(value: i32) -> Vec<u8> {
    return key_bytes(value);
}
pub fn bool_encoding(value: bool) -> String {
    return key_encoding(value);
}
pub fn decimal_bytes(value: incan_std_core::num::Decimal128) -> Vec<u8> {
    return key_bytes(value);
}
pub fn decimal_encoding(value: incan_std_core::num::Decimal128) -> String {
    return key_encoding(value);
}
pub fn status_bytes(value: Status) -> Vec<u8> {
    return key_bytes(value);
}
pub fn status_encoding(value: Status) -> String {
    return key_encoding(value);
}
pub fn http_status_bytes(value: HttpStatus) -> Vec<u8> {
    return key_bytes(value);
}
impl crate::__incan_std::collections::OrdinalKey for Status {
    fn ordinal_bytes(&self) -> Vec<u8> {
        self.value().as_bytes().to_vec()
    }
    fn ordinal_hash(&self) -> i64 {
        incan_std_data::collections::__private::ordinal_key_hash_bytes(
            self.value().as_bytes(),
        )
    }
    fn ordinal_bytes_equal(&self, data: Vec<u8>) -> bool {
        self.value().as_bytes() == data.as_slice()
    }
    fn ordinal_encoding() -> String {
        "value-enum:str:local.Status:4:paid;4:open;:v1".to_string()
    }
    fn from_ordinal_bytes(
        data: Vec<u8>,
    ) -> Result<Self, crate::__incan_std::collections::OrdinalMapError> {
        let value = String::from_utf8(data)
            .map_err(|err| crate::__incan_std::collections::OrdinalMapError::invalid_key_record(
                err.to_string(),
                -1i64,
            ))?;
        Self::from_value(value.as_str())
            .ok_or_else(|| crate::__incan_std::collections::OrdinalMapError::invalid_key_record(
                format!("invalid value for {}: {}", "Status", value),
                -1i64,
            ))
    }
}
impl crate::__incan_std::collections::OrdinalKey for HttpStatus {
    fn ordinal_bytes(&self) -> Vec<u8> {
        self.value().to_le_bytes().to_vec()
    }
    fn ordinal_hash(&self) -> i64 {
        incan_std_data::collections::__private::ordinal_key_hash_bytes(
            &self.value().to_le_bytes(),
        )
    }
    fn ordinal_bytes_equal(&self, data: Vec<u8>) -> bool {
        data.as_slice() == self.value().to_le_bytes().as_slice()
    }
    fn ordinal_encoding() -> String {
        "value-enum:int:local.HttpStatus:200;404;:v1".to_string()
    }
    fn from_ordinal_bytes(
        data: Vec<u8>,
    ) -> Result<Self, crate::__incan_std::collections::OrdinalMapError> {
        if data.len() != 8 {
            return Err(
                crate::__incan_std::collections::OrdinalMapError::invalid_key_record(
                    format!("{} OrdinalMap key bytes must be 8 bytes", "HttpStatus"),
                    -1i64,
                ),
            );
        }
        let mut bytes = [0u8; 8];
        bytes.copy_from_slice(data.as_slice());
        let value = i64::from_le_bytes(bytes);
        Self::from_value(value)
            .ok_or_else(|| crate::__incan_std::collections::OrdinalMapError::invalid_key_record(
                format!("invalid value for {}: {}", "HttpStatus", value),
                -1i64,
            ))
    }
}
