loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__ordinal_map_str_fast_lookup.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::collections::OrdinalMap;
pub use crate::__incan_std::collections::OrdinalMapError;
pub fn require_column(
    columns: OrdinalMap<String>,
    key: String,
) -> Result<i64, OrdinalMapError> {
    return columns.require(key);
}
pub fn require_columns(
    columns: OrdinalMap<String>,
    keys: Vec<String>,
) -> Result<Vec<i64>, OrdinalMapError> {
    return columns.require_many(keys);
}
pub fn direct_literal_construction() -> Result<i64, OrdinalMapError> {
    let columns: OrdinalMap<String> = OrdinalMap::from_keys(
        vec!["id".to_string(), "status".to_string()],
    )?;
    let explicit: OrdinalMap<String> = OrdinalMap::from_pairs(
        vec![("id".to_string(), 10), ("status".to_string(), 20)],
    )?;
    return Ok::<
        i64,
        OrdinalMapError,
    >(columns.require("status".into())? + explicit.require("status".into())?);
}
